<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_margin="20dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"


            android:maxHeight="150dp"
            android:minHeight="100dp"
            android:scaleType="fitCenter"
            tools:src="@android:drawable/ic_menu_camera" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_post_name"
            android:layout_margin="2dp"
            android:hint="@string/post_row_hint_title"
            android:textStyle="normal|bold"
            android:textSize="12sp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp" />

        <TextView
            android:id="@+id/txt_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_row_hint_description"
            android:inputType="textMultiLine"
            android:lines="3"
            android:paddingBottom="1dp"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"
            android:paddingTop="1dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_post_type"
            android:padding="5dp"
            android:hint="@string/post_row_hint_type_of_barter"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt_post_value"
            android:padding="5dp"
            android:hint="@string/post_row_hint_barter_value"
            android:textSize="12sp" />

        <TextView
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:id="@+id/txt_post_user"

            android:padding="2dp"
            android:layout_gravity="right"
            android:hint="@string/post_row_hint_by"
            android:textStyle="italic"
            android:textSize="12sp"
            android:paddingLeft="30dp" />

        <TextView
            android:id="@+id/txt_post_upload_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="right"
            android:hint="@string/post_row_hint_post_time"
            android:padding="1dp"
            android:paddingLeft="30dp"
            android:paddingRight="1dp"
            android:textSize="10sp"
            android:textStyle="normal|italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/likeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:padding="2dp"
                android:background="@color/tw__solid_white"
                app:srcCompat="@mipmap/ic_thumb_up_black_24dp" />

            <TextView
                android:id="@+id/textView_likeNum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_gravity="right"
                android:layout_weight="25.14"
                android:paddingTop="12dp"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView_likeLabel"
                android:layout_width="100px"
                android:layout_height="match_parent"

                android:layout_gravity="right"
                android:layout_weight="18"
                android:hint="@string/post_row_hint_likes_txt"
                android:paddingLeft="3dp"
                android:paddingTop="12dp"
                android:text="@string/post_row_label_txt_likes"
                android:textSize="12sp"
                android:textStyle="italic" />



            <ImageButton
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="1dp"
                android:padding="8dp"
                android:background="@color/tw__solid_white"
                app:srcCompat="@mipmap/ic_share" />


        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>