<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/dialog_comment_txt_you_can_comment_anything_about_this_barter_item"
        android:textSize="20sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/txt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/dialog_comment_hint_give_your_comments_here"
        android:inputType="text"/>
        <!--android:drawableRight="@mipmap/error" -->





    <Button
        android:id="@+id/btn_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/tw__blue_default"
        android:textSize="20dp"
        android:text="@string/dialog_comment_txt_comment"
        android:textColor="@android:color/white" />
</LinearLayout>