<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jason.barterworld.SelfAdminEditActivity">


    <ImageButton
        android:id="@+id/btn_img_profile_edit"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:adjustViewBounds="false"
        android:maxHeight="150dp"
        android:minHeight="150dp"
        android:paddingTop="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:background="@android:drawable/spinner_background"
        android:layout_marginStart="10dp" />

    <Button
        android:id="@+id/btn_post_edit"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/activity_self_admin_edit_btn_save_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_barter_desc_edit" />



    <Button
        android:id="@+id/btn_post_delete"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/tw__composer_white"
        android:background="@color/com_facebook_blue"
        android:text="@string/activity_self_admin_edit_btn_delete_this_item"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_post_edit" />






    <EditText
        android:id="@+id/txt_post_name_edit"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/txt_box"
        android:ems="10"
        android:hint="@string/activity_self_admin_edit_hint_barter_item_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintLeft_toRightOf="@+id/btn_img_profile_edit"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginStart="10dp" />

    <Spinner
        android:id="@+id/spinner_barter_type_edit"
        android:layout_width="160dp"
        android:layout_height="wrap_content"

        android:padding="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/btn_img_profile_edit"

        app:layout_constraintTop_toBottomOf="@+id/txt_barter_value_edit"

        android:prompt="@string/activity_self_admin_edit_barter_prompt"
        android:entries="@array/barter_arrays"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/txt_barter_value_edit"
        android:layout_width="160dp"
        app:layout_constraintLeft_toRightOf="@id/btn_img_profile_edit"

        app:layout_constraintTop_toBottomOf="@+id/txt_post_name_edit"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:ems="10"

        android:background="@drawable/txt_box"
        android:padding="5dp"
        android:hint="@string/activity_self_admin_edit_hint_barter_value"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />




    <TextView
        android:id="@+id/txt_lat"
        android:layout_width="0dp"
        android:text="@string/activity_self_admin_edit_txt_latitude"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@id/btn_img_profile_edit"
        app:layout_constraintTop_toBottomOf="@+id/spinner_barter_type_edit"
        android:layout_marginStart="10dp" />

    <TextView
        android:id="@+id/txt_long"
        android:text="@string/activity_self_admin_edit_txt_longtitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toRightOf="@+id/btn_img_profile_edit"
        app:layout_constraintTop_toBottomOf="@+id/txt_lat"
        android:layout_marginStart="10dp" />

    <EditText
        android:textSize="11sp"
        android:id="@+id/editText_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"

        android:text="@string/activity_self_admin_edit_txt_lat_value"
        app:layout_constraintLeft_toRightOf="@+id/txt_lat"
        app:layout_constraintTop_toBottomOf="@+id/spinner_barter_type_edit"
        android:layout_marginStart="10dp" />

    <EditText
        android:textSize="11sp"
        android:id="@+id/editText_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"

        android:text="@string/activity_self_admin_edit_txt_long_value"
        app:layout_constraintLeft_toRightOf="@+id/txt_long"
        app:layout_constraintTop_toBottomOf="@+id/txt_lat"
        android:layout_marginStart="10dp" />





    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txt_barter_desc_edit"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:lines="5"
        android:background="@drawable/txt_box"
        android:padding="5dp"
        android:hint="@string/activity_self_admin_edit_hint_barter_item_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_img_profile_edit"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />




</android.support.constraint.ConstraintLayout>
