<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.jason.barterworld.PostActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <ImageButton
        android:id="@+id/btn_img_profile"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="false"
        android:maxHeight="150dp"
        android:minHeight="150dp"
        android:paddingTop="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera"
        tools:background="@android:drawable/spinner_background" />

    <Button
        android:id="@+id/btn_post"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/activity_post_btn_publish_my_barter_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp" />

    <EditText
        android:id="@+id/txt_post_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/txt_box"
        android:ems="10"
        android:hint="@string/activity_post_hint_barter_item_name"
        android:inputType="textPersonName"
        android:padding="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_img_profile"
        tools:layout_editor_absoluteX="8dp" />

    <Spinner
        android:id="@+id/spinner_barter_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:entries="@array/barter_arrays"
        android:padding="3dp"
        android:prompt="@string/activity_post_spinner_barter_prompt"
        app:layout_constraintLeft_toLeftOf="parent"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_barter_desc"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="272dp" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txt_barter_desc"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:lines="3"
        android:background="@drawable/txt_box"
        android:padding="5dp"
        android:hint="@string/activity_post_hint_barter_item_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_post_name"
        tools:layout_editor_absoluteY="158dp"
        tools:layout_editor_absoluteX="8dp" />

    <EditText
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_barter_type"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/txt_barter_value"
        android:background="@drawable/txt_box"
        android:padding="5dp"
        android:hint="@string/activity_post_hint_barter_value"
        tools:layout_editor_absoluteY="237dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/txt_lat"
        android:layout_width="0dp"
        android:text="@string/activity_post_txt_latitude"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_barter_value"
        tools:layout_editor_absoluteX="67dp"
        tools:layout_editor_absoluteY="302dp" />

    <TextView
        android:id="@+id/txt_long"
        android:text="@string/activity_post_txt_longtitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        tools:layout_editor_absoluteY="334dp"
        tools:layout_editor_absoluteX="83dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_lat"/>

    <EditText
        android:textSize="11sp"
        android:id="@+id/editText_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/activity_post_txt_lat_value"
        app:layout_constraintLeft_toRightOf="@+id/txt_lat"
        app:layout_constraintTop_toBottomOf="@+id/txt_barter_value"
        tools:layout_editor_absoluteY="300dp"
        tools:layout_editor_absoluteX="9dp" />

    <EditText
        android:textSize="11sp"
        android:id="@+id/editText_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:text="@string/activity_post_txt_long_value"
        app:layout_constraintLeft_toRightOf="@+id/txt_long"
        app:layout_constraintTop_toBottomOf="@+id/txt_lat"
        tools:layout_editor_absoluteY="333dp"
        tools:layout_editor_absoluteX="9dp" />

</android.support.constraint.ConstraintLayout>
